# grooves

./: README.md
client/: .env.development  .env.production  .eslintrc.cjs  flake.nix  index.html  package.json
client/src/: api.ts  constants.ts  env.d.ts  error-page.tsx  main.tsx  types.ts
client/src/components/: card.tsx  navbar.tsx  playlist.tsx  playlistSelector.tsx  search.tsx
client/src/contexts/: auth.tsx
client/src/hooks/: usePlaylist.ts  usePlaylists.ts
client/src/routes/: callback.tsx  index.tsx  root.tsx
client/src/routes/player/: index.tsx
client/src/routes/playlists/: playlistPage.tsx  playlistsPage.tsx
client/src/util/: auth.ts  playlists.ts
server/: .gitignore  Cargo.toml  Dockerfile  flake.nix  fly.toml
server/crates/grooves/: Cargo.toml
server/crates/grooves-model/: Cargo.toml
server/crates/grooves-model/src/: lib.rs  playlist.rs  session.rs  user.rs
server/crates/grooves-player/: Cargo.toml
server/crates/grooves-player/src/: connection.rs  manager.rs  player.rs  util.rs
server/crates/grooves-player/src/player/: commands.rs
server/crates/grooves/src/: error.rs  main.rs  routes.rs  state.rs
server/crates/grooves/src/middleware/: auth.rs
server/crates/grooves/src/routes/: auth.rs  mod.rs  player.rs  playlists.rs  spotify.rs
server/crates/grooves/src/util/: mod.rs
server/crates/grooves/src/util/spotify/: mod.rs
server/grooves-entity/: Cargo.toml
server/grooves-entity/src/entities/: mod.rs  playlist.rs  prelude.rs  session.rs  user.rs
server/grooves-migration/: Cargo.toml
server/grooves-migration/src/: lib.rs  m20230307_212009_create_users.rs  m20230307_212813_create_playlists.rs  m20230307_215816_create_sessions.rs  main.rs
server/grooves-player/: Cargo.toml
server/grooves-player/src/: connection.rs  lib.rs  manager.rs  player.rs  util.rs
server/grooves-player/src/player/: error.rs  mod.rs
server/grooves-player/src/player/commands/: mod.rs
server/migrations/: 001-create-initial.sql  all.sql
server/phonos-entity/: Cargo.toml
server/phonos-entity/src/entities/: playlist.rs  session.rs  user.rs
server/phonos-migration/: Cargo.toml
server/phonos-migration/src/: m20230307_212813_create_playlists.rs
server/phonos-player/: Cargo.toml
server/phonos-player/src/: player.rs
server/phonos-player/src/player/: command.rs  player_builder.rs  player_options.rs
server/phonos-player/src/player/commands/: mod.rs
server/src/: error.rs  main.rs  player_connection.rs
server/src/extractors/: bearer.rs
server/src/middleware/: auth.rs
server/src/models/: mod.rs  playlist.rs  spotify.rs
server/src/routes/: auth.rs  mod.rs  player.rs  playlists.rs  spotify.rs
server/src/routes/player/: command_handler.rs  messages.rs  mod.rs
server/src/state/: connection.rs  mod.rs
server/src/util/spotify/: fetcher.rs  mod.rs
