[package]
name = "grooves-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["default", "ws"] }
axum-macros = "0.3.4"
dotenvy = "0.15"
futures = "0.3"
if_chain = "1.0"
grooves-entity = { path = "grooves-entity" }
grooves-player = { path = "grooves-player" }
rand = "0.8"
# rspotify = "0.11"
rspotify = { path = "../../rspotify" }
sea-orm = { version = "0.11", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-json",
    "with-chrono",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace]
members = ["grooves-entity", "grooves-migration", "grooves-player"]
