[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
grooves-model = {path = "./crates/grooves-model", version = "0.0.0"}
grooves-player = {path = "./crates/grooves-player", version = "0.0.0"}

rspotify = "0.12"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[workspace.lints.rust]
rust_2018_idioms = "warn"
unused_lifetimes = "warn"
semicolon_in_expressions_from_macros = "warn"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "allow", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

rc_buffer = "warn"
str_to_string = "warn"
