[package]
name = "grooves-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
rspotify = { git = "https://github.com/ramsayleung/rspotify.git", branch = "ramsay_fix_serialize_error" }
