[package]
name = "grooves-player"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
itertools = "0.10"
grooves-entity = { path = "../grooves-entity" }
rand = "0.8"
sea-orm = { version = "0.11", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-json",
    "with-chrono",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rspotify = { path = "../../../rspotify" }
tokio = { version = "1.13", features = ["rt-multi-thread", "macros"] }
