[package]
name = "grooves-player"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rspotify.workspace = true

grooves-model.workspace = true

anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
itertools = "0.12"
rand = "0.8"
